iac/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Food Ordering System - Secure AWS Architecture'

Parameters:
  DBPassword:
    Type: String
    NoEcho: true
    Description: "Database password (must be provided during stack creation)"
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: SSH key pair for secure EC2 access

Resources:
  AppVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: FoodOrdering-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AppVPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Public-Subnet

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: Private-Subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AppVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: Private-Subnet-2

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AppVPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH
      VpcId: !Ref AppVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServer-SG

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MySQL access
      VpcId: !Ref AppVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: Database-SG

  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      ImageId: ami-0c02fb55956c7d316
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash
            yum update -y
            yum install -y httpd php php-mysqli php-json git mariadb105 mod_ssl
            
            # Generate self-signed SSL certificate
            openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
              -keyout /etc/pki/tls/private/localhost.key \
              -out /etc/pki/tls/certs/localhost.crt \
              -subj "/C=MY/ST=Kuala Lumpur/L=Cyberjaya/O=MMU/CN=localhost"
            
            # Configure Apache for SSL
            echo "Listen 443" >> /etc/httpd/conf/httpd.conf
            
            systemctl start httpd
            systemctl enable httpd
            cd /var/www/html
            rm -rf *
            git clone https://github.com/yingan0314/database-security-assignment2.git .
            cp -r app/* .
            rm -rf app
            chown -R apache:apache /var/www/html
            chmod -R 755 /var/www/html
            systemctl restart httpd
      Tags:
        - Key: Name
          Value: FoodOrdering-WebServer

  FoodDB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: fooddb-cfn
      Engine: mysql
      EngineVersion: '5.7'
      DBInstanceClass: db.t3.micro
      AllocatedStorage: '20'
      StorageType: gp2
      StorageEncrypted: true
      MasterUsername: admin
      MasterUserPassword: !Ref DBPassword
      DBName: fooddb
      VPCSecurityGroups:
        - !Ref DatabaseSecurityGroup
      DBSubnetGroupName: !Ref DBSubnetGroup
      PubliclyAccessible: false
      BackupRetentionPeriod: 7
      Tags:
        - Key: Name
          Value: FoodOrdering-RDS

  BackupBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub food-ordering-backup-${AWS::AccountId}
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: Name
          Value: FoodOrdering-Backup



Outputs:
  WebsiteURL:
    Description: Web Application URL
    Value: !Sub http://${WebServer.PublicIp}/
  RDSEndpoint:
    Description: RDS Endpoint
    Value: !GetAtt FoodDB.Endpoint.Address
  BackupBucketName:
    Description: S3 Backup Bucket
    Value: !Ref BackupBucket
  WebsiteURLSecure:
    Description: Secure Web Application URL
    Value: !Sub https://${WebServer.PublicIp}/
